# big-data

./: .gitignore  README.md  compose.yaml  pyproject.toml
L1/: pw_mapping.py  testing.ipynb
L1/Report/: main.typ  refs.bib
L2/: gradient_descent.py  p1.ipynb  p2.ipynb
L2/Report/: main.typ  refs.bib
L3/Report/: main.typ  refs.bib
