[project]
name = "big-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars",
    "plotly",
    "peewee",
    "psycopg2-binary",
    "jupyter",
    "seaborn",
    "statsmodels",
    "scikit-learn",
    "pyspark",
    "pyspark-stubs"
]
